# SDL2-GL-TestBench

./: CMakeLists.txt  Draw.cpp  Draw.h  build.sh  lubuntu_install_deps.sh  main.cpp
